force-app/main/default/objects/MPM4_BASE__Milestone1_Project_Creation_Settings__c/MPM4_BASE__Milestone1_Project_Creation_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>These custom settings are used when the automated project creation process is fired.</description>
    <label>Project Creation Settings</label>
</CustomObject>