force-app/main/default/objects/MPM4_BASE__Milestone1_Project_Creation_Settings__c/fields/MPM4_BASE__Project_Creation_Field__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Project_Creation_Field__c</fullName>
    <description>This field is used to trigger the project creation.</description>
    <inlineHelpText>The value in the field populated in this setting will be used to find the correct project template.</inlineHelpText>
    <label>Project Creation Field</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>