force-app/main/default/objects/MPM4_BASE__Milestone1_Project_Creation_Settings__c/fields/MPM4_BASE__Project_Lookup_Field1__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Project_Lookup_Field1__c</fullName>
    <description>The name of the Lookup field on the project object that will relate to the record that trigger the project to be created.</description>
    <inlineHelpText>The name of the Lookup field on the project object that will relate to the record that trigger the project to be created.</inlineHelpText>
    <label>Project Lookup Field 1</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>