force-app/main/default/objects/MPM4_BASE__Milestone1_Project_Creation_Settings__c/fields/MPM4_BASE__Project_Lookup_Field2__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Project_Lookup_Field2__c</fullName>
    <description>A second Lookup field at the project level that will be populated with the value that is populated in the field used in the &apos;Secondary Lookup&apos; custom setting value.</description>
    <inlineHelpText>Please note that if this field is used, there will have to be a value in the &apos;Secondary Lookup&apos; custom setting.</inlineHelpText>
    <label>Project Lookup Field 2</label>
    <type>TextArea</type>
</CustomField>