force-app/main/default/objects/MPM4_BASE__Milestone1_Project_Creation_Settings__c/fields/MPM4_BASE__ProjectNamingConventionField__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__ProjectNamingConventionField__c</fullName>
    <description>The field that is used to populate the name of the project that will be created.</description>
    <inlineHelpText>The field that is used to populate the name of the project that will be created.</inlineHelpText>
    <label>Project Naming Convention Field</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>