force-app/main/default/objects/MPM4_BASE__Milestone1_Project_Creation_Settings__c/fields/MPM4_BASE__SecondaryLookup__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__SecondaryLookup__c</fullName>
    <description>The API name of a Lookup field that is used to populate a value for the Lookup field used in the &apos;Project Lookup Field 2&apos; custom setting.</description>
    <inlineHelpText>The API name of a Lookup field that is used to populate a value for the Lookup field used in the &apos;Project Lookup Field 2&apos; custom setting.</inlineHelpText>
    <label>Secondary Lookup</label>
    <type>TextArea</type>
</CustomField>